overlays/dev/60-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-list-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: dev-easyshopping.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-list-api
                port:
                  number: 8080
  tls:
    - hosts:
        - dev-easyshopping.duckdns.org
      secretName: shopping-list-tls
